--- a/rusttracks-web/static/index.css
+++ b/rusttracks-web/static/index.css
@@ -10,7 +10,7 @@
 }
 
 #card {
-    width: 400px;
+    width: 425px;
     right: 0px;
     margin: 12px 12px 0px 0px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -95,7 +95,7 @@
     border-radius: 3px;
     box-sizing: border-box;
     padding: 10px;
-    width: 150px;
+    width: 175px;
 }
 
 .calander-wrapper {
@@ -197,5 +197,16 @@
 
 /* pop up */
 .ol-popup {
-    opacity: 100%;
+    background-color: aliceblue;
+    border-radius: 10px;
+    padding: 15px;
+}
+
+.popup-subtitle {
+    color: cornflowerblue;
+    margin: -5px;
+}
+
+.popup-values {
+    color: darkslategrey;
 }
